update layout, remove all unused post, add comment

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -69,8 +69,8 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="/about" class={activeNav === "about" ? "active" : ""}>
-              About
+            <a href="/hireme" class={activeNav === "about" ? "active" : ""}>
+              Hire Me
             </a>
           </li>
           <li>
