--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -60,7 +60,8 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
       (function() { // DON'T EDIT BELOW THIS LINE
       var d = document, s = d.createElement('script');
       s.src = 'https://nursyah-surge-sh.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
+      
+      s.setAttribute('data-timestamp', (+new Date()).toString());
       (d.head || d.body).appendChild(s);
       })();
     </script>
