--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -11,6 +11,7 @@
     --color-card: 230, 230, 230;
     --color-card-muted: 205, 205, 205;
     --color-border: 236, 233, 233;
+
   }
   html[data-theme="dark"] {
     --color-fill: 33, 39, 55;
@@ -20,6 +21,47 @@
     --color-card-muted: 138, 51, 2;
     --color-border: 171, 75, 8;
   }
+  section[data-theme="light"] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+  section[data-theme="dark"] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+  label[data-theme="light"] {
+    --tw-bg-opacity: 1;
+    color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+  label[data-theme="dark"] {
+    --tw-bg-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  input[data-theme="light"] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+    --tw-text-opacity: 1;
+    color: rgb(55 65 81 / var(--tw-text-opacity));
+  }
+  input[data-theme="dark"] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+    --tw-text-opacity: 1;
+    color: rgb(209 213 219 / var(--tw-text-opacity));
+  }
+  /* input[data-theme="light"]{
+    
+  }
+  input[data-theme="dark"]{
+
+  }
+  textarea[data-theme="light"]{
+    
+  }
+  textarea[data-theme="dark"]{
+
+  } */
   #sun-svg,
   html[data-theme="dark"] #moon-svg {
     display: none;
@@ -123,10 +165,12 @@
 }
 
 @layer components {
+ 
   .display-none {
     @apply hidden;
   }
   .focus-outline {
     @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
   }
+
 }
