--- a/src/layouts/HireMeLayout.astro
+++ b/src/layouts/HireMeLayout.astro
@@ -104,16 +104,13 @@ const client: Client[] = [
 
 <style>
   .input{
-    @apply block w-full px-4 py-2 mt-2 border  rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 focus:ring-blue-300 focus:ring-opacity-40 dark:focus:border-blue-300 focus:outline-none focus:ring;
+    @apply block w-full px-4 py-2 mt-2 border  rounded-md  focus:border-blue-400 focus:ring-blue-300 focus:ring-opacity-40 dark:focus:border-blue-300 focus:outline-none focus:ring;
   }
 
   .textarea{
-    @apply block w-full px-4 py-2 mt-2 border rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 focus:ring-blue-300 focus:ring-opacity-40 dark:focus:border-blue-300 focus:outline-none focus:ring;
+    @apply block w-full px-4 py-2 mt-2 border rounded-md focus:ring-blue-300 focus:ring-opacity-40 focus:outline-none focus:ring;
   }
   
-  .label{
-    @apply dark:text-gray-200;
-  }
   .btnsubmit{
     @apply px-8 py-2.5 leading-5 text-white transition-colors duration-300 transform bg-skin-accent rounded-md  hover:opacity-60 focus:outline-none focus:bg-gray-600 ;
   }
