--- a/src/layouts/HireMeLayout.astro
+++ b/src/layouts/HireMeLayout.astro
@@ -114,4 +114,17 @@ const client: Client[] = [
   .btnsubmit{
     @apply px-8 py-2.5 leading-5 text-white transition-colors duration-300 transform bg-skin-accent rounded-md  hover:opacity-60 focus:outline-none focus:bg-gray-600 ;
   }
+
+  .lightLabel {
+    @apply text-gray-700; 
+   }
+   .darkLabel {
+     @apply text-gray-200;
+   }
+   .lightInput {
+     @apply text-gray-700 bg-white border-gray-200 focus:border-blue-400;
+   }
+   .darkInput {
+     @apply bg-gray-800 text-gray-300 border-gray-600 focus:border-blue-300;
+   }
 </style>
