fix bug and update content

--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -65,6 +65,9 @@ const next = pageNum < totalPages ? "" : "disabled";
 </Layout>
 
 <style>
+  pre{
+    
+  }
   .pagination-wrapper {
     @apply mb-8 mt-auto flex justify-center;
   }
