--- a/src/layouts/HireMeLayout.astro
+++ b/src/layouts/HireMeLayout.astro
@@ -1,11 +1,10 @@
 ---
 import { SITE } from "@config";
 import Breadcrumbs from "@components/Breadcrumbs.astro";
-import Hr from "@components/Hr.astro";
 import Footer from "@components/Footer.astro";
 import Header from "@components/Header.astro";
 import Layout from "./Layout.astro";
-import axios from 'axios'
+import FormHireme from "@components/formhireme";
 
 export interface Props {
   frontmatter: {
@@ -24,12 +23,12 @@ const { frontmatter } = Astro.props;
 
 const client: Client[] = [
   {
-    img: 'https://desa-songo.com/favicon.svg',
+    img: '/assets/desasongo.svg',
     link: 'https://desa-songo.com',
     title: 'desa-songo'
   },
   {
-    img: 'https://ptsvnusantara.com/wp-content/uploads/2023/04/Logo-PTSVN-1-scaled-66x47.jpg',
+    img: '/assets/Logo-PTSVN-1-scaled-66x47.jpg',
     link: 'https://ptsvnusantara.com/',
     title: 'ptsv nusantara'
   }
@@ -68,41 +67,16 @@ const client: Client[] = [
           })
         }
       </div>
-
+      
       <hr/>
-      <section id="form" class="max-w-4xl py-2 px-6 mx-auto rounded-md shadow-md">
-        <form>
-          <div class="mt-2">
-              <label class="label" for="username">Nama</label>
-              <input id="nama" placeholder="eko" type="text" class="input">
-          </div>
+      <FormHireme client:load />
 
-        <div class="mt-2">
-            <label class="label" for="password">Nomor WA(+62)</label>
-            <input id="nowa" placeholder="089529456280" type="text" class="input">
-        </div>
-
-        <div class="mt-2">
-            <label class="label" for="password">Deskripsi</label>
-            <textarea id="deskripsi" placeholder="bikinkan website untuk penyewaan mobil" class="textarea"></textarea>
-        </div>
-
-        <div class="mt-2">
-            <label class="label" for="passwordConfirmation">Budget</label>
-            <input id="budget" placeholder="1,5jt" type="text" class="input">
-        </div>
-      </div>
-
-      <div class="flex justify-end my-6">
-          <button class="btnsubmit">Send</button>   
-      </form>
-      </section>
     </section>
   </main>
   <Footer />
 </Layout>
 
-<style>
+<style is:global>
   .input{
     @apply block w-full px-4 py-2 mt-2 border  rounded-md  focus:border-blue-400 focus:ring-blue-300 focus:ring-opacity-40 dark:focus:border-blue-300 focus:outline-none focus:ring;
   }
