--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,18 +63,18 @@ const socialImageURL = new URL(
     /> -->
 
     
-    <!-- prism -->
+    
     
 
     <!-- Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPHVM6EYSK"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPHVM6EYSK"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-NPHVM6EYSK');
-    </script> -->
+    </script>
 
 
     <!-- {
@@ -89,7 +89,7 @@ const socialImageURL = new URL(
       )
     } -->
     <script is:inline src="/toggle-theme.js"></script>
-    <!-- <link rel="stylesheet" href="/assets/prism.css"> -->
+    
     
   </head>
   <body>
