--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -43,11 +43,12 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
     </article>
 
     <ul class="tags-container">
+      
       {tags.map(tag => <Tag name={slugifyStr(tag)} />)}
     </ul>
 
     <div id="disqus_thread"></div>
-    <script>
+    <script is:inline>
       /**
       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
       *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
